# actually_checked_typescript

./: .gitignore  Cargo.toml  README.md
benches/: benchs.rs
src/: act_patch.rs  act_process.rs  act_structs.rs  args_parser.rs  lib.rs  main.rs  patch_index_helper.rs
ts_example/: test.ts
wix/: main.wxs
