[package]
name = "actypes"
version = "0.2.0"
edition = "2021"
description = "Add runtime type checking to your Typescript code"
authors = ["QuentinGruber"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.4", features = ["derive"] }
swc_common = "0.32.1"
swc_ecma_ast = "0.109.1"
swc_ecma_parser = { version = "0.140.0", features = ["typescript"] }

[lib]
name = "act_lib"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[profile.release]
lto = true
strip = true
opt-level = 3
